refactor: library builder